Fix triangle animation and YCCVR spacing

--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ a {
     font-family: HYShortSamul, sans-serif;
     position: relative;
     z-index: 10;
+    letter-spacing: -2px;
 }
 
 .mainWrapper h1 {
@@ -235,7 +236,7 @@ a {
     box-shadow: 0 0 0 2px var(--yellow);
 }
 
-/* Triangles - Fixed rotation */
+/* Triangles - Fixed animation */
 .triangle {
     position: absolute;
     top: 0;
@@ -248,23 +249,23 @@ a {
 .triangle img {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 0;
     width: 300px;
     height: 300px;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -32%) rotate(0deg);
     animation: rotation 6s linear infinite;
 }
 
 .triangleRed img {
-    width: 310px;
-    height: 310px;
-    animation-direction: reverse;
-    animation-duration: 8s;
+    width: 300px;
+    height: 300px;
+    transform: translate(-50%, -32%) rotate(0deg);
+    animation: rotation 6s linear infinite;
 }
 
 @keyframes rotation {
-    0% { transform: translate(-50%, -50%) rotate(0deg); }
-    100% { transform: translate(-50%, -50%) rotate(360deg); }
+    0% { transform: translate(-50%, -32%) rotate(0deg); }
+    100% { transform: translate(-50%, -32%) rotate(360deg); }
 }
 
 /* Main Site Styles */
@@ -302,6 +303,7 @@ a {
 .nav-logo {
     font-size: 2rem;
     font-weight: bold;
+    letter-spacing: -2px;
 }
 
 .yccc-text {
@@ -702,7 +704,7 @@ a {
     }
     
     .triangleRed img {
-        width: 260px;
-        height: 260px;
+        width: 250px;
+        height: 250px;
     }
 }
